修改目录结构

--- a/fcap/templates/etc/supervisor.conf
+++ b/fcap/templates/etc/supervisor.conf
@@ -1,5 +1,5 @@
 [program:{{ project_name }}]
-command=/root/v3/bin/gunicorn manage:app -c /root/{{ project_name }}/unicorn.py
+command=gunicorn manage:app -c unicorn.py
 directory=/root/{{ project_name }}
 user=root
 autostart=true
