--- a/fcap/templates/requirements.txt
+++ b/fcap/templates/requirements.txt
@@ -1,15 +1,18 @@
 flask
 flask_script
 flask_restful
+flask_login
+flask_mail
+flask_jwt_extended
 flask_sqlalchemy
 flask_redis
 click
 gevent
 gunicorn
-oss2
 pymysql
 xlwt
 pycryptodome
 rsa
 redis
 celery
+git+https://github.com/cangmean/fet.git
