--- a/fcap/templates/etc/supervisor_celery.conf
+++ b/fcap/templates/etc/supervisor_celery.conf
@@ -1,5 +1,5 @@
 [program:celery_mail]
-command=/root/v3/bin/celery worker -A celery_worker.celery -l info -Q task_email -n worker_email@%h
+command=celery worker -A celery_worker.celery -l info -Q task_email -n worker_email@%h
 directory=/root/{{ project_name }}
 user=root
 autostart=true
